--- a/pom.xml
+++ b/pom.xml
@@ -88,11 +88,11 @@
 	<artifactId>log4j-core          </artifactId>
 	<version>2.19.0    </version>
       </dependency>
-      <dependency>
-	<groupId>mysql                   </groupId>
-	<artifactId>mysql-connector-java</artifactId>
-	<version>8.0.31    </version>
-      </dependency>
+     <dependency>
+       <groupId>com.mysql</groupId>
+       <artifactId>mysql-connector-j</artifactId>
+       <version>9.1.0</version>
+     </dependency>           
       <dependency>
 	<groupId>ognl                    </groupId>
 	<artifactId>ognl                </artifactId>
